jhipster/templates/jhipster-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jhipster
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jhipster
      version: "v1"
  template:
    metadata:
      labels:
        app: jhipster
        version: "v1"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - jhipster
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
      - name: jhipster-app
        image: registry.gitlab.com/nelhousni/jhipster
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /management/health
            port: http
          initialDelaySeconds: 20
          periodSeconds: 15
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /management/health
            port: http
          initialDelaySeconds: 120
