jhipster/templates/jhipster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jhipster
  namespace: application
  labels:
    app: jhipster
spec:
  selector:
    app: jhipster
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8080
